// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`injectHtml adds app-config to an empty script tag 1`] = `
"
        <!doctype html>
        <html>
          <head>
            <meta charset=\\"utf-8\\">
            <title>Webpack App</title>
            <meta name=\\"viewport\\" content=\\"width=device-width,initial-scale=1\\">
            <script id=\\"app-config\\">window._appConfig={\\"foo\\":42}</script>
          </head>
          <body><script src=\\"/main.js\\"></script></body>
        </html>
      "
`;

exports[`injectHtml adds app-config to an existing script tag 1`] = `
"
        <!doctype html>
        <html>
          <head>
            <meta charset=\\"utf-8\\">
            <title>Webpack App</title>
            <meta name=\\"viewport\\" content=\\"width=device-width,initial-scale=1\\">
            <script id=\\"app-config\\">window._appConfig={\\"foo\\":88}</script>
          </head>
          <body><script src=\\"/main.js\\"></script></body>
        </html>
      "
`;

exports[`injectHtml uses provided loadConfig options 1`] = `
"
        <!doctype html>
        <html>
          <head>
            <meta charset=\\"utf-8\\">
            <title>Webpack App</title>
            <meta name=\\"viewport\\" content=\\"width=device-width,initial-scale=1\\">
            <script id=\\"app-config\\">window._appConfig={\\"foo\\":true}</script>
          </head>
          <body><script src=\\"/main.js\\"></script></body>
        </html>
      "
`;

exports[`injectHtml validates provided app-config 1`] = `
"
      <!doctype html>
      <html>
        <head>
          <meta charset=\\"utf-8\\">
          <title>Webpack App</title>
          <meta name=\\"viewport\\" content=\\"width=device-width,initial-scale=1\\">
          <script id=\\"app-config\\">window._appConfig={}</script>
        </head>
        <body><script src=\\"/main.js\\"></script></body>
      </html>
    "
`;
